--- a/recipes/empanadas.html
+++ b/recipes/empanadas.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Empanadas</h1>
+        <img src="/recipes/empanadas.jpg">
+        <p>La empanada es una masa rellena con carnes, verduras o frutas cocida al horno o frita en aceite o grasa. Su nombre proviene del castellano empanar</p>
     </body>  
 </html>
